--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.3.0",
+    "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
